fix resource id wrapping in tooltips

--- a/application/modules/bpm/assets/css/browser.css
+++ b/application/modules/bpm/assets/css/browser.css
@@ -69,3 +69,7 @@ root {
     background-color: #009933;
     opacity: .5
 }
+.resourceId {
+    display: inline-block;
+    white-space:nowrap;
+}
